# llm_shopping-assistant

./: README.md  bot.py  config.py  main.ipynb  pyproject.toml  requirements.txt  shopping_assistant.py
data/: db.csv
experiments/: main.ipynb
handlers/: shopping.py  start.py
